feat: add exceptions handler with Problem Details